docs: update README.md and AGENTS.md with Java 25 language standards, var idioms, and Gatherers